--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="keeplar" />
 
     <meta property="og:title" content="keeplar - Presentes para o Futuro" />
-    <meta property="og:description" content="Agenda entregas de presentes físicos e digitais para datas especiais. Cria memórias para o futuro."}]}}}
+    <meta property="og:description" content="Agenda entregas de presentes físicos e digitais para datas especiais. Cria memórias para o futuro."/>
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
