--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>keeplar - Presentes para o Futuro</title>
+    <title>keepla - Presentes para o Futuro</title>
     <meta name="description" content="Plataforma para agendar entregas de presentes físicos e digitais para datas futuras. O teu eu do futuro vai agradecer." />
-    <meta name="author" content="keeplar" />
+    <meta name="author" content="keepla" />
 
-    <meta property="og:title" content="keeplar - Presentes para o Futuro" />
+    <meta property="og:title" content="keepla - Presentes para o Futuro" />
     <meta property="og:description" content="Agenda entregas de presentes físicos e digitais para datas especiais. Cria memórias para o futuro."/>
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
