refactor: comment out unused auth.js script

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="auth.js"></script>
+    <!-- <script src="auth.js"></script> -->
   </body>
 </html>
