refactor(keepsake): move navigation to bottom bar and update branding
- Remove duplicate navigation buttons from all steps
- Update favicon and logo references to new Keepla branding
- Add visual feedback for selected type in TypeStep
- Make product selection optional in form validation
- Add new brand color utility class

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
-    <!-- Favicon atualizado com o logótipo do Selo do Tempo -->
-    <link rel="icon" href="/lovable-uploads/a58d6383-77f7-451e-b692-d10c4298397e.png" type="image/png">
+    <!-- Favicon atualizado com o logótipo preto Keepla -->
+    <link rel="icon" href="/keepla-logo-black.png" type="image/png">
     
     <!-- Tipografia Keepla: Inter (principal) e Georgia (emotiva) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
